--- a/src/componentes/header/Header.css
+++ b/src/componentes/header/Header.css
@@ -1,7 +1,7 @@
 .title {
-  font-size: 3rem; /* Tamaño del título */
-  color: #4CAF50; /* Color del texto */
-  text-align: center; /* Alineación centrada */
-  margin-bottom: 20px; /* Margen inferior */
-  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3); /* Sombra de texto */
+  font-size: 3rem;
+  color: #000000;
+  text-align: center;
+  margin-bottom: 20px;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.3);
 }
